<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/rounded_dialog">

    <TextView
        android:id="@+id/message_textView"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/alert_msg_perm_notifications_listener" />


    <Button
        android:id="@+id/positiveButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_red"
        android:backgroundTint="@null"
        android:text="@string/alert_posbtn" />

    <Button
        android:id="@+id/negativeButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_gray"
        android:backgroundTint="@null"
        android:text="@string/alert_negbtn" />

</LinearLayout>