<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/rounded_dialog">

    <TextView
        android:id="@+id/message_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:text="@string/title_sleep_mode" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_set_start_time"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/btn_sleep_mode_start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_set_end_time"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/btn_sleep_mode_end"
        android:layout_marginBottom="16dp">

    </com.google.android.material.button.MaterialButton>
</LinearLayout>
